# rules_oci

./: MODULE.bazel  WORKSPACE  internal_deps.bzl
docs/: go.md
examples/binaries/: BUILD.bazel
examples/env/: BUILD.bazel
examples/env_inheritance/: BUILD.bazel
examples/labels/: BUILD.bazel
examples/location_expansion/: BUILD.bazel
examples/multi_arch/: BUILD.bazel
examples/push/: BUILD.bazel
examples/sign/: BUILD.bazel
experimental/apt/: deb_import.bzl  packages.bzl
experimental/brew/: bottle.bzl
oci/: dependencies.bzl  repositories.bzl
oci/private/: image.bzl  push.sh.tpl  tarball.bzl
