load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("@container_structure_test//:defs.bzl", "container_structure_test")
load("//oci:defs.bzl", "oci_image")

sh_binary(
    name = "test_sh",
    srcs = ["test.bash"],
)

tar(
    name = "app",
    srcs = [":test_sh"]
)

genrule(
    name = "app_cmd",
    srcs = [],
    outs = ["app_cmd.txt"],
    cmd = """
    echo $(rootpaths :test.bash) > "$@"
    echo "a1" >> "$@"
    echo "a2 b2" >> "$@"
    echo " a3\tb3 " >> "$@"
    """,
    tools = [
        ":test.bash",
    ],
)

oci_image(
    name = "image",
    base = "@ubuntu",
    cmd = ":app_cmd",
    entrypoint = [
        "env",
        "-",
    ],
    tars = [":app"],
)

container_structure_test(
    name = "test",
    configs = ["test.yaml"],
    image = ":image",
)
