load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("@aspect_bazel_lib//lib:testing.bzl", "assert_contains")
load("//oci:defs.bzl", "oci_image", "oci_image_index")
load(":transition.bzl", "multi_arch")

tar(
    name = "app",
    srcs = ["test.bash"],
)

oci_image(
    name = "image",
    base = "@ubuntu",
    cmd = ["test.bash"],
    entrypoint = ["bash"],
    tars = [":app"],
)

multi_arch(
    name = "images",
    image = ":image",
    platforms = [
        "//examples:linux_arm64",
        "//examples:linux_amd64",
    ],
)

oci_image_index(
    name = "index",
    images = [
        ":images",
    ],
)

genrule(
    name = "hash",
    srcs = [":index"],
    outs = ["sha256.sum"],
    cmd = "$(JQ_BIN) -r '.manifests[0].digest' $(location :index)/index.json > $@",
    toolchains = ["@jq_toolchains//:resolved_toolchain"],
)

assert_contains(
    name = "check_digest",
    actual = ":hash",
    expected = "sha256:6978ead26e703dd676c0f51a9e0468ebf4b6cd4b14cd5452ffe86a0f2c5bfa5a",
)
