load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("//cosign:defs.bzl", "cosign_sign")
load("//oci:defs.bzl", "oci_image")

tar(
    name = "app",
    srcs = ["app.bash"],
    transform = { package_name(): "." }
)

oci_image(
    name = "image",
    base = "@ubuntu",
    cmd = ["app.bash"],
    tars = [":app"],
)

cosign_sign(
    name = "sign",
    image = ":image",
    repository = "test",
)

sh_test(
    name = "test",
    srcs = ["test.bash"],
    args = [
        "$(JQ_BIN)",
        "$(CRANE_BIN)",
        "$(COSIGN_BIN)",
        "$(LAUNCHER_WRAPPER)",
        "$(location :sign)",
        "$(location :image)",
    ],
    data = [
        ":image",
        ":sign",
        "@jq_toolchains//:resolved_toolchain",
        "@oci_cosign_toolchains//:current_toolchain",
        "@oci_crane_toolchains//:current_toolchain",
        "@oci_zot_toolchains//:current_toolchain",
    ],
    toolchains = [
        "@oci_zot_toolchains//:current_toolchain",
        "@oci_cosign_toolchains//:current_toolchain",
        "@oci_crane_toolchains//:current_toolchain",
        "@jq_toolchains//:resolved_toolchain",
    ],
)
